<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Inflation Calculator</string>
    <string name="sumToConvert">Amount to convert (%1$s)</string>
    <string name="yearOfOrigin">From (year), between %1$d and %2$d</string>
    <string name="yearOfResult">To (year), between %1$d and %2$d</string>
    <string name="convertButton">Convert</string>
    <string name="resultText">Result (%1$s)</string>
    <string name="actionAbout">About</string>
    <string name="aboutText"><![CDATA[For France, the transition from old Francs to new Francs is automatic from 1960. The transition from Francs to Euro is automatic from 2002.<br><br>This application was created by <a href="http://www.corenting.fr">corenting</a>.<br><br><a href="https://github.com/corenting/InflationCalculator">Github repository</a> (source code and issues tracker)<br><br>License: MIT<br><br>Version:&nbsp;]]></string>
    <string name="errorToast">Error during the conversion!</string>
    <string name="euros">euros</string>
    <string name="francs">francs</string>
    <string name="oldFrancs">old francs</string>
    <string name="dollars">dollars</string>
    <string name="pounds_sterling">pounds sterling</string>
    <string name="wons">wons</string>
    <string name="currency">Currency</string>
    <string name="france_currencies">Euros and Francs (France)</string>
    <string name="usa_currencies">US Dollars (USA)</string>
    <string name="uk_currencies">Pounds sterling (UK)</string>
    <string name="south_korea_currencies">Wons (South Korea)</string>
    <string name="canadian_dollars">canadian dollars</string>
    <string name="canada_currencies">Canadian Dollars (Canada)</string>
    <string name="no_amount_entered">No amount entered</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="invalid_year_error">Invalid year entered</string>
</resources>
