<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_theme"
        android:title="@string/theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_theme_system"
                    android:title="@string/theme_system" />
                <item
                    android:id="@+id/action_theme_light"
                    android:title="@string/theme_light" />
                <item
                    android:id="@+id/action_theme_dark"
                    android:title="@string/theme_dark" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_about"
        android:title="@string/actionAbout"
        app:showAsAction="never" />
</menu>