<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sumToConvert"
            android:id="@+id/sumToConvertTextView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/amountEditText"
            android:layout_below="@+id/sumToConvertTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AF"
            android:id="@+id/currencyOriginTextView"
            android:layout_below="@+id/amountEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/yearOfOrigin"
            android:layout_below="@id/currencyOriginTextView"
            android:layout_alignBaseline="@+id/yearOfOriginSpinner"
            android:id="@+id/yearOfOriginTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearOfOriginSpinner"
            android:layout_below="@+id/currencyOriginTextView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_alignLeft="@+id/yearOfResultSpinner"
            android:layout_alignStart="@+id/yearOfResultSpinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/yearOfResult"
            android:id="@+id/yearOfResultTextView"
            android:layout_alignBaseline="@+id/yearOfResultSpinner"
            android:layout_below="@+id/yearOfOriginSpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearOfResultSpinner"
            android:layout_below="@+id/yearOfOriginSpinner"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/yearOfResultTextView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertButton"
            android:id="@+id/convertButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/yearOfResultSpinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resultText"
            android:id="@+id/resultTextView"
            android:layout_below="@id/convertButton"
            android:layout_marginTop="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/resultEditText"
            android:layout_below="@+id/resultTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AF"
            android:id="@+id/currencyResultTextView"
            android:layout_below="@+id/resultEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</ScrollView>
